--- a/sortingAlgorithmsVizualizer/todo.txt
+++ b/sortingAlgorithmsVizualizer/todo.txt
@@ -4,24 +4,21 @@ public bool InputListInAGoodFormat(string inputList) //if the string is "" retur
 {
 	return true; //do the logic
 }
--------------------------------------------------------------------------------------------------------------------------------
-MEGÉRTENI MÉRT KELL A TOSTRING
-        public void StartAlgorithm(string inputList)
+-----------------------------------------------------------------------------------------------------------------------------
+Egyenlőre annyi hogy kirajzolja a táblára a kívánt listát:
+A lista inicializálására kell külön modelbeli event? (SZERINTEM igen)
+VisualListItem
+
+        private void modelListItemChanged(object? sender, List<int> e)
         {
-            list.Clear();
-            string[] inputLists = inputList.Split(',');
-            for (int i = 0; i < inputLists.Length; i++)
-            {
-                list.Add(inputList[i]); //some reaaly weird behavior
-            }
-            list.Sort();
+            throw new NotImplementedException();
         }
 
-Egyenlőre annyi hogy kirajzolja a táblára a kívánt listát
+
 
 //ObservationCollection amit követ a view
 
-//kitalálni hogy is működjön a rendezés maga (timer?)
+//kitalálni hogy is működjön a rendezés maga (2 elem cseréjének eventje)
 
 private void Start_Stop_Algorithm(object obj)
 {
@@ -30,3 +27,6 @@ private void Start_Stop_Algorithm(object obj)
 
 //start stop gomb váltakozása
 
+vizualizer -> visualizer
+
+sleepel altatni az algoritmust hogy látható legyen, stop, speed up, speed down ezt állítja
